--- a/package.json
+++ b/package.json
@@ -39,6 +39,14 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^8.50.0"
+    "@semantic-release/commit-analyzer": "^11.1.0",
+    "@semantic-release/github": "^9.2.6",
+    "@semantic-release/release-notes-generator": "^12.1.0",
+    "eslint": "^8.50.0",
+    "semantic-release": "^22.0.12"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Vereselen/Fork-Lab456-"
   }
 }
